syntax = "proto3";

option csharp_namespace = "ApiGatewayRp";

package config;

service ConfigManagement {
  rpc UpdateConfig (ConfigData) returns (Empty);
  rpc DeleteConfig (ConfigId) returns (Empty);
  rpc GetAllConfigs (Empty) returns (ConfigList);
  rpc GetConfig (ConfigId) returns (ConfigData);
  
  rpc RevertPendingUpdates(Empty) returns (RevertChangesResponse);
}

message Empty {}

message ConfigId {
  string apiName = 1;
  string apiVersion = 2;
}
message ConfigData {
  string data = 1;
  string validFrom = 2;
}
message ConfigMetadata {
  string apiName = 1;
  string apiVersion = 2;
}
message ConfigList {
  repeated ConfigMetadata configs = 1;
}
message RevertChangesResponse {
  int32 revertedChanges = 1;
}